--- a/editor-style.css
+++ b/editor-style.css
@@ -5,7 +5,7 @@
 
 blockquote {
 	background: transparent url(images/quote.png) no-repeat scroll 0 0;
-	font-style: italic;
+	font-style: normal;
 	margin: 5px 0 5px 0;
 	padding: 10px 15px 10px 60px;
 }
